# ToFTDS

./: .gitignore  CMakeLists.txt  README.md
hw1/src/: CMakeLists.txt
hw1/src/common/: CMakeLists.txt  ensure.h  integral.cpp  integral.h  message.h  task.h  types.h
hw1/src/common/ut/: integral_test.cpp
hw1/src/leader/: CMakeLists.txt  leader.cpp  leader.h  leader_launch.cpp
hw1/src/socket/: CMakeLists.txt  socket.cpp  socket.h
hw1/src/worker/: CMakeLists.txt  worker.cpp  worker.h  worker_launch.cpp
hw2/src/: CMakeLists.txt
hw2/src/client/: CMakeLists.txt  cli.cpp  client.h
hw2/src/common/: log.h  query.h  storage.h  timeout.h
hw2/src/consensus/: CMakeLists.txt  common.h  message.h  node.cpp  node.h  node_sender.h  state.h
hw2/src/consensus/ut/: node_test.cpp
hw2/src/kv_store/: CMakeLists.txt  kv_store.proto
hw2/src/worker/: CMakeLists.txt  communication.proto  kv_store.proto  worker.cpp
hw3/: CMakeLists.txt  communication.proto  log.h  server.cpp
hw3/broadcast/: CMakeLists.txt  common.h  message.h  node.h  node_sender.h  timeout.h  timeout_builder.h
hw3/broadcast/ut/: node_test.cpp  state_test.cpp
hw3/test/: commands.sh
